add OAuth providers for Github and others

--- a/onYOURway.Server.Net/onYOURway.Server.Net.csproj
+++ b/onYOURway.Server.Net/onYOURway.Server.Net.csproj
@@ -60,6 +60,33 @@
     <Reference Include="EntityFramework.SqlServer">
       <HintPath>..\packages\EntityFramework.6.1.2\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
+    <Reference Include="KatanaContrib.Security.Dropbox">
+      <HintPath>..\packages\KatanaContrib.Security.Dropbox.1.0.0\lib\net45\KatanaContrib.Security.Dropbox.dll</HintPath>
+    </Reference>
+    <Reference Include="KatanaContrib.Security.Foursquare">
+      <HintPath>..\packages\KatanaContrib.Security.Foursquare.1.0.0\lib\net45\KatanaContrib.Security.Foursquare.dll</HintPath>
+    </Reference>
+    <Reference Include="KatanaContrib.Security.Github">
+      <HintPath>..\packages\KatanaContrib.Security.Github.1.0.0\lib\net45\KatanaContrib.Security.Github.dll</HintPath>
+    </Reference>
+    <Reference Include="KatanaContrib.Security.Instagram">
+      <HintPath>..\packages\KatanaContrib.Security.Instagram.1.0.0\lib\net45\KatanaContrib.Security.Instagram.dll</HintPath>
+    </Reference>
+    <Reference Include="KatanaContrib.Security.LinkedIn">
+      <HintPath>..\packages\KatanaContrib.Security.LinkedIn.1.0.0\lib\net45\KatanaContrib.Security.LinkedIn.dll</HintPath>
+    </Reference>
+    <Reference Include="KatanaContrib.Security.Meetup">
+      <HintPath>..\packages\KatanaContrib.Security.Meetup.1.0.0\lib\net45\KatanaContrib.Security.Meetup.dll</HintPath>
+    </Reference>
+    <Reference Include="KatanaContrib.Security.Odnoklassniki">
+      <HintPath>..\packages\KatanaContrib.Security.Odnoklassniki.1.0.0\lib\net45\KatanaContrib.Security.Odnoklassniki.dll</HintPath>
+    </Reference>
+    <Reference Include="KatanaContrib.Security.StackExchange">
+      <HintPath>..\packages\KatanaContrib.Security.StackExchange.1.0.0\lib\net45\KatanaContrib.Security.StackExchange.dll</HintPath>
+    </Reference>
+    <Reference Include="KatanaContrib.Security.VK">
+      <HintPath>..\packages\KatanaContrib.Security.VK.1.0.0\lib\net45\KatanaContrib.Security.VK.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.AspNet.Identity.Core, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Microsoft.AspNet.Identity.Core.2.1.0\lib\net45\Microsoft.AspNet.Identity.Core.dll</HintPath>
