--- a/onYOURway.Server.Net/packages.config
+++ b/onYOURway.Server.Net/packages.config
@@ -7,6 +7,16 @@
   <package id="Breeze.WebApi2.EF6" version="1.4.7" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.2" targetFramework="net45" />
   <package id="jQuery" version="2.0.1.1" targetFramework="net45" />
+  <package id="KatanaContrib.Security.Dropbox" version="1.0.0" targetFramework="net45" />
+  <package id="KatanaContrib.Security.Foursquare" version="1.0.0" targetFramework="net45" />
+  <package id="KatanaContrib.Security.Github" version="1.0.0" targetFramework="net45" />
+  <package id="KatanaContrib.Security.Instagram" version="1.0.0" targetFramework="net45" />
+  <package id="KatanaContrib.Security.LinkedIn" version="1.0.0" targetFramework="net45" />
+  <package id="KatanaContrib.Security.Meetup" version="1.0.0" targetFramework="net45" />
+  <package id="KatanaContrib.Security.Odnoklassniki" version="1.0.0" targetFramework="net45" />
+  <package id="KatanaContrib.Security.Pack" version="1.0.1" targetFramework="net45" />
+  <package id="KatanaContrib.Security.StackExchange" version="1.0.0" targetFramework="net45" />
+  <package id="KatanaContrib.Security.VK" version="1.0.0" targetFramework="net45" />
   <package id="Knockout.Validation" version="1.0.1" targetFramework="net45" />
   <package id="knockout-bootstrap" version="0.2.1" targetFramework="net45" />
   <package id="knockoutjs" version="3.0.0" targetFramework="net45" />
