--- a/onYOURway.Server.Net/WebConfig.base.config
+++ b/onYOURway.Server.Net/WebConfig.base.config
@@ -9,24 +9,26 @@
 		<section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
 		<!-- <section name="glimpse" type="Glimpse.Core.Configuration.Section, Glimpse.Core" /> -->
 	</configSections>
-
-	<appSettings>
-		<!--change this to be domain specific settings-->
-		<add key="DefaultTheme" value="onYOURway"/>
-		<add key="DefaultRegion" value="Baden"/>
-		<add key="webpages:Version" value="3.0.0.0" />
-		<add key="webpages:Enabled" value="false" />
-		<add key="ClientValidationEnabled" value="true" />
-		<add key="UnobtrusiveJavaScriptEnabled" value="true" />
-		<add key="EmailsTo" value="YOUR_NOTIFICATION_EMAIL_ADDRESS"/>
-		<add key="EmailsFrom" value="YOUR_FROM_EMAIL_ADDRESS"/>
-	</appSettings>
+	
 	<connectionStrings>
 		<add name="DefaultConnection"
 			providerName="System.Data.SqlClient"
 			connectionString="data source=localhost;Initial Catalog=onYOURway;Trusted_Connection=True;MultipleActiveResultSets=True"
 			/>
 	</connectionStrings>
+	
+	<appSettings>
+		<!---->
+		<add key="CreateDatabase" value="IfNotExists"/>
+		<!--change this to be domain specific settings-->
+		<add key="DefaultTheme" value="onYOURway"/>
+		<add key="DefaultRegion" value="Baden"/>
+		<add key="EmailsTo" value="YOUR_NOTIFICATION_EMAIL_ADDRESS"/>
+		<add key="EmailsFrom" value="YOUR_FROM_EMAIL_ADDRESS"/>
+
+		<!--<add key="ClientValidationEnabled" value="true" />
+		<add key="UnobtrusiveJavaScriptEnabled" value="true" />-->
+	</appSettings>
 
 	<system.diagnostics>
 		<switches>
