--- a/onYOURway.Server.Net/WebConfig.base.config
+++ b/onYOURway.Server.Net/WebConfig.base.config
@@ -16,18 +16,16 @@
 			connectionString="data source=localhost;Initial Catalog=onYOURway;Trusted_Connection=True;MultipleActiveResultSets=True"
 			/>
 	</connectionStrings>
-	
+
 	<appSettings>
 		<!---->
-		<add key="CreateDatabase" value="IfNotExists"/>
+		<add key="CreateDatabase" value="IfNotExists" />
 		<!--change this to be domain specific settings-->
-		<add key="DefaultTheme" value="onYOURway"/>
-		<add key="DefaultRegion" value="Baden"/>
-		<add key="EmailsTo" value="YOUR_NOTIFICATION_EMAIL_ADDRESS"/>
-		<add key="EmailsFrom" value="YOUR_FROM_EMAIL_ADDRESS"/>
+		<add key="DefaultTheme" value="onYOURway" />
+		<add key="DefaultRegion" value="Baden" />
+		<add key="EmailsTo" value="info@onYOURway.at" />
+		<add key="EmailsFrom" value="web@onYOURway.at" />
 
-		<!--<add key="ClientValidationEnabled" value="true" />
-		<add key="UnobtrusiveJavaScriptEnabled" value="true" />-->
 	</appSettings>
 
 	<system.diagnostics>
@@ -56,20 +54,13 @@
 			<remove name="OPTIONSVerbHandler" />
 			<remove name="TRACEVerbHandler" />
 			<add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
-			<!--Debuging-->
-			<add name="Browser Link for HTML" path="*.html" verb="*" type="System.Web.StaticFileHandler, System.Web, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" resourceType="File" preCondition="integratedMode" />
-			<!--<add name="Glimpse" path="glimpse.axd" verb="GET" type="Glimpse.AspNet.HttpHandler, Glimpse.AspNet" preCondition="integratedMode" />-->
 		</handlers>
 		<modules>
 			<remove name="FormsAuthenticationModule" />
-			<!--<add name="Glimpse" type="Glimpse.AspNet.HttpModule, Glimpse.AspNet" preCondition="integratedMode" />-->
 		</modules>
 		<caching>
 			<profiles>
-				<add	location="Any"
-						duration="00:00:01" policy="DontCache"
-						extension="*"
-           />
+				<add location="Any" duration="00:00:01" policy="DontCache" extension="*" />
 			</profiles>
 		</caching>
 		<validation validateIntegratedModeConfiguration="false" />
@@ -77,28 +68,12 @@
 	<runtime>
 		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
 			<dependentAssembly>
-				<assemblyIdentity name="System.Web.Helpers" publicKeyToken="31bf3856ad364e35" />
-				<bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
-			</dependentAssembly>
-			<dependentAssembly>
-				<assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
-				<bindingRedirect oldVersion="0.0.0.0-5.0.0.0" newVersion="5.0.0.0" />
-			</dependentAssembly>
-			<!--<dependentAssembly>
-        <assemblyIdentity name="System.Web.Optimization" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-1.1.0.0" newVersion="1.1.0.0" />
-      </dependentAssembly>-->
-			<dependentAssembly>
-				<assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
-				<bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
-			</dependentAssembly>
-			<dependentAssembly>
 				<assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" />
 				<bindingRedirect oldVersion="0.0.0.0-1.5.2.14234" newVersion="1.5.2.14234" />
 			</dependentAssembly>
 			<dependentAssembly>
 				<assemblyIdentity name="Microsoft.Owin" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-				<bindingRedirect oldVersion="0.0.0.0-2.1.0.0" newVersion="2.1.0.0" />
+				<bindingRedirect oldVersion="0.0.0.0-3.0.1.0" newVersion="3.0.1.0" />
 			</dependentAssembly>
 			<dependentAssembly>
 				<assemblyIdentity name="Microsoft.Owin.Security" publicKeyToken="31bf3856ad364e35" culture="neutral" />
@@ -120,6 +95,18 @@
 				<assemblyIdentity name="Microsoft.AspNet.SignalR.Core" publicKeyToken="31bf3856ad364e35" culture="neutral" />
 				<bindingRedirect oldVersion="0.0.0.0-2.0.0.0" newVersion="2.0.0.0" />
 			</dependentAssembly>
+			<dependentAssembly>
+				<assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
+			</dependentAssembly>
+			<dependentAssembly>
+				<assemblyIdentity name="System.Web.Http" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
+			</dependentAssembly>
+			<dependentAssembly>
+				<assemblyIdentity name="System.Net.Http.Formatting" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
+			</dependentAssembly>
 		</assemblyBinding>
 	</runtime>
 	<entityFramework>
@@ -132,17 +119,4 @@
 			<provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
 		</providers>
 	</entityFramework>
-	<!-- 
-	<glimpse defaultRuntimePolicy="Off" endpointBaseUri="~/Glimpse.axd">
-    //If you are having issues with Glimpse, please include this. It will help us figure out whats going on. 
-      <logging level="Trace" />
-
-    //Want to use Glimpse on a remote server? Ignore the LocalPolicy by removing this comment.
-      <runtimePolicies>
-        <ignoredTypes>
-          <add type="Glimpse.AspNet.Policy.LocalPolicy, Glimpse.AspNet"/>
-        </ignoredTypes>
-      </runtimePolicies>
-  </glimpse> 
-	-->
 </configuration>
