tested and refined data model on data upgrade and import

--- a/onYOURway.Server.Net/onYOURway.Server.Net.csproj
+++ b/onYOURway.Server.Net/onYOURway.Server.Net.csproj
@@ -264,6 +264,7 @@
     <Content Include="App_Data\oyw.Messages.sql" />
     <Content Include="Documentation\Documentation.xsl" />
     <Content Include="JP.aspx" />
+    <Content Include="Models\onYOURwayDbAfterModelCreated.sql" />
     <Content Include="WebConfig.base.config">
       <SubType>Designer</SubType>
     </Content>
