add: auto-generation of db-logic (for SQL Server) and extending data model based on API considerations

--- a/onYOURway.Server.Net/onYOURway.Server.Net.csproj
+++ b/onYOURway.Server.Net/onYOURway.Server.Net.csproj
@@ -237,7 +237,7 @@
     <Compile Include="Models\Identity\User.cs" />
     <Compile Include="Models\Entries\Entry.cs" />
     <Compile Include="Models\Entries\Event.cs" />
-    <Compile Include="Models\Entries\Realm.cs" />
+    <Compile Include="Models\Boundaries\Realm.cs" />
     <Compile Include="Models\Lookup\BaseMapFeature.cs" />
     <Compile Include="Models\DbGeographyConverter.cs" />
     <Compile Include="Models\Entries\EntryCategory.cs" />
@@ -245,15 +245,15 @@
     <Compile Include="Models\Entries\EntryLocalization.cs" />
     <Compile Include="Models\Entries\EntryReference.cs" />
     <Compile Include="Models\Entries\EntryLink.cs" />
-    <Compile Include="Models\Entries\Category.cs" />
-    <Compile Include="Models\Entries\CategoryName.cs" />
+    <Compile Include="Models\Taxonomy\Category.cs" />
+    <Compile Include="Models\Taxonomy\CategoryName.cs" />
     <Compile Include="Models\App\Message.cs" />
     <Compile Include="Controllers\LocateControllerModes.cs" />
     <Compile Include="Models\onYOURwayDbContext.cs" />
     <Compile Include="Models\App\ExternalSystem.cs" />
-    <Compile Include="Models\Entries\Region.cs" />
-    <Compile Include="Models\Entries\Map.cs" />
-    <Compile Include="Models\Entries\CategoryRelation.cs" />
+    <Compile Include="Models\Boundaries\Region.cs" />
+    <Compile Include="Models\Boundaries\Map.cs" />
+    <Compile Include="Models\Taxonomy\CategoryRelation.cs" />
     <Compile Include="Models\CustomConventions.cs" />
     <Compile Include="Models\onYOURwayDbInitializer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
