add: autonaming dynamic types cleanup ($type)

--- a/onYOURway.Server.Net/packages.config
+++ b/onYOURway.Server.Net/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Breeze.DynamicTypeRenaming" version="1.0.0" targetFramework="net45" />
   <package id="Breeze.Server.ContextProvider" version="1.5.3" targetFramework="net45" />
   <package id="Breeze.Server.ContextProvider.EF6" version="1.5.3" targetFramework="net45" />
   <package id="Breeze.Server.WebApi2" version="1.5.3" targetFramework="net45" />
