add: ContextProvider to facilitate Update security

--- a/onYOURway.Server.Net/onYOURway.Server.Net.csproj
+++ b/onYOURway.Server.Net/onYOURway.Server.Net.csproj
@@ -216,6 +216,7 @@
     <Compile Include="App_Start\DatabaseConfig.cs" />
     <Compile Include="Controllers\AccountControllerModels.cs" />
     <Compile Include="App_Start\BreezeDynamicTypeRenamingSerializationBinder.cs" />
+    <Compile Include="Controllers\onYOURwayContextProvider.cs" />
     <Compile Include="Models\Entries\Media.cs" />
     <Compile Include="Models\Identity\IdentityManagers.cs" />
     <Compile Include="App_Start\IdentityConfig.cs" />
